@@ -14,6 +14,10 @@ Build
 
 C API
 
+- PyLong_AsLongLong() now accepts int (as well as long) arguments.
+  Consequently, PyArg_ParseTuple's 'L' code also accepts int (as well
+  as long) arguments.
+
 New platforms
 
 Tests
